2009-05-20  Xan Lopez  <xlopez@igalia.com>

Reviewed by Jan Alonzo.

        https://bugs.webkit.org/show_bug.cgi?id=25414
        [GTK] ROLE_PANEL should not be used for paragraphs and list items.

        Implement Atk paragraph role for paragraph elements.

        * accessibility/gtk/AccessibilityObjectWrapperAtk.cpp:
        (webkit_accessible_get_role):

Canonical link: https://commits.webkit.org/35820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43907 268f45cc-cd09-0410-ab3c-d52691b4dbfc